# pixelle-mcp

mcp-base/: pyproject.toml
mcp-client/: pyproject.toml
mcp-server/: pyproject.toml
