[project]
name = "pixelle-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.4",
    "boto3>=1.38.34",
    "fastmcp>=3.2.0",
    "pillow>=12.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.33.0",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
